# app/Http/Controllers/Api/V1/TaskStatusController.php
@@ -9,6 +9,7 @@ use App\Modules\Base\Resources\SuccessResource;
 use App\Modules\TaskStatus\DTO\TaskStatusDTO;
 use App\Modules\TaskStatus\Requests\StoreTaskStatusRequest;
 use App\Modules\TaskStatus\Requests\TaskStatusDeleteRequest;
+use App\Modules\TaskStatus\Requests\TaskStatusShowRequest;
 use App\Modules\TaskStatus\Requests\UpdateTaskStatusRequest;
 use App\Modules\TaskStatus\Resources\TaskStatusCollection;
 use App\Modules\TaskStatus\Resources\TaskStatusResource;
@@ -21,7 +22,7 @@ class TaskStatusController extends Controller
     ) {}
 
     /**
-     * @OA\Get (
+     * @OA\Get(
      *     path="/api/v1/auth/task-statuses",
      *     summary="Get all TaskStatuses",
      *     tags={"TaskStatus"},
@@ -31,10 +32,6 @@ class TaskStatusController extends Controller
      *         response="200",
      *         description="Success",
      *         @OA\JsonContent(ref="#/components/schemas/TaskStatusesResponse")
-     *     ),
-     *     @OA\Response(
-     *         response="400",
-     *         description="Bad Request",
      *     ),
      *)
      */
@@ -46,7 +43,26 @@ class TaskStatusController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/api/v1/auth/task-statuses",
+     *     summary="Create a TaskStatus",
+     *     tags={"TaskStatus"},
+     *     operationId="CreateTaskStatus",
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/StoreTaskStatusRequest")
+     *     ),
+     *     @OA\Response(
+     *         response="201",
+     *         description="Created",
+     *         @OA\JsonContent(ref="#/components/schemas/StoreTaskStatusResponse")
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Validation Exception",
+     *     ),
+     *)
      */
     public function store(StoreTaskStatusRequest $request)
     {
@@ -60,17 +76,71 @@ class TaskStatusController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get (
+     *     path="/api/v1/auth/task-statuses/{task_status}",
+     *     summary="Get a TaskStatus",
+     *     tags={"TaskStatus"},
+     *     operationId="TaskStatusShow",
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\Parameter(
+     *         description="taskstatus id",
+     *         in="path",
+     *         name="task_status",
+     *         required=true,
+     *         example=1
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Success",
+     *          @OA\JsonContent(ref="#/components/schemas/TaskResponse")
+     *      ),
+     *      @OA\Response(
+     *          response="404",
+     *          description="TaskStatus not found",
+     *      ),
+     *      @OA\Response(
+     *           response="400",
+     *           description="Validation exception"
+     *       ),
+     *)
      */
-    public function show(TaskStatus $taskStatus)
+    public function show(TaskStatusShowRequest $request)
     {
+        $taskStatus = TaskStatus::query()->find($request->id);
+
         return new TaskStatusResource($taskStatus);
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Patch (
+     *     path="/api/v1/auth/task-statuses/{task_status}",
+     *     summary="Update a TaskStatus",
+     *     tags={"TaskStatus"},
+     *     operationId="UpdateTaskStatus",
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\Parameter(
+     *         description="taskstatus id",
+     *         in="path",
+     *         name="task_status",
+     *         required=true,
+     *         example=1
+     *      ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/UpdateTaskStatusRequest")
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Success",
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateTaskStatusResponse")
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          description="Bad Request",
+     *      ),
+     *)
      */
-    public function update(UpdateTaskStatusRequest $request, TaskStatus $taskStatus)
+    public function update(UpdateTaskStatusRequest $request)
     {
         $dto = new TaskStatusDTO(
             id: $request->id,
@@ -82,20 +152,42 @@ class TaskStatusController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete (
+     *     path="/api/v1/auth/task-statuses/{task_status}",
+     *     summary="Delete a TaskStatus",
+     *     tags={"TaskStatus"},
+     *     operationId="DeleteTaskStatus",
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\Parameter(
+     *         description="taskstatus id",
+     *         in="path",
+     *         name="task_status",
+     *         required=true,
+     *         example=1
+     *       ),
+     *     @OA\Response(
+     *         response="204",
+     *         description="Successfully deleted",
+     *         @OA\MediaType(
+     *              mediaType="application/json"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="Task not found",
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          description="Validation exception"
+     *      )
+     *)
      */
     public function destroy(TaskStatusDeleteRequest $request)
     {
-        try {
-            $taskStatus = TaskStatus::query()->find($request->id);
-            if (empty($taskStatus)) {
-                throw new \DomainException('Status is not found.');
-            }
-        } catch (\Exception $exception) {
-            return new ErrorResource($exception);
-        }
+        $taskStatus = TaskStatus::query()->find($request->id);
 
         $taskStatus->delete();
-        return new SuccessResource(null);
+
+        return response()->noContent();
     }
 }
